app/assets/stylesheets/hero-unit.css.scss
.hero-unit {
  @include padding-leader;
  position: relative;
  padding-bottom: $base-spacing-unit * 2;
  text-align: center;
  color: white;
  border-bottom: 1px solid $primary-color;
  border-radius: 0;
  background-image: image-url('hero-bg.png');
  background-color: $hero-background;

  h1 {
    @include text-shadow(rgba(black, .75) 0 0 6px);
    @include font-size($mega-size);
    font: {
      family: $alt-font-family;
      weight: $alt-bold;
    }
    margin-bottom: $half-spacing-unit;
  }

  .carousel {
    $height: 300px;
    $border-width: 10px;
    @include clearfix;
    position: relative;
    height: $height + 2 * $border-width;
    border: $border-width solid rgba(white, .1);

    .inner { background: white; }

    .item {
      float: left;
      margin-right: 2px;
    }

    .prev,
    .next {
      @include color-link(rgba(white, .5), white);
      @include text-shadow(rgba(black, .75) 0 0 5px);
      position: absolute;
      z-index: 20;
      top: 0;
      height: $height;
      padding: 0 $base-spacing-unit;
      font-size: 42px;
      line-height: $height - $base-spacing-unit;
      &:hover,
      &:focus {
        text-decoration: none;
      }
    }

    .prev { left: 0; }
    .next { right: 0; }
  }

  .video {
    $bg-color: $youtube;
    $width: $base-spacing-unit * 3.5;
    $height: $base-spacing-unit * 2.5;
    $border-width: 3px;
    @include size($width, $height);
    @include border-radius(12px);
    @include color-link(white);
    position: absolute;
    bottom: - $height/2;
    left: 50%;
    display: inline-block;
    margin-left: - $width/2;
    font-size: 52px;
    font-family: icons;
    line-height: $height - 2*$border-width;
    border: $border-width solid white;
    background: $bg-color;
    &:hover,
    &:focus {
      text-decoration: none;
      background: darken($bg-color, 10%);
    }

    i {
      position: relative;
      top: 1px;
    }
  }
}

.lead {
  font: {
    family: $alt-font-family;
    size: $h2-size;
  }
}

